--- a/name-generator/package.json
+++ b/name-generator/package.json
@@ -1,6 +1,7 @@
 {
-  "homepage": "https://idamilankovic.github.io-gender",
+  "homepage": "https://idamilankovic.github.io/idamilankovic.github.io-gender/",
   "name": "name-generator",
+  "proxy": "http://localhost:3000/idamilankovic.github.io-gender",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
